--- a/resources/views/frontend/signup.html
+++ b/resources/views/frontend/signup.html
@@ -11,15 +11,16 @@
 
     <!--====== Google Font ======-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet">
-
+    
     <!--====== Vendor Css ======-->
     <link rel="stylesheet" href="css/vendor.css">
-
+    <link rel="stylesheet" href="./css/navbar.css">
     <!--====== Utility-Spacing ======-->
     <link rel="stylesheet" href="css/utility.css">
-
+    
     <!--====== App ======-->
     <link rel="stylesheet" href="css/app.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body class="config">
     <div class="preloader is-active">
@@ -31,152 +32,91 @@
     <!--====== Main App ======-->
     <div id="app">
 
-        <!--====== Main Header ======-->
-        <header class="header--style-1">
+<!-- Header section start -->
+<header class="ecomNav-header">
+    <div class="upperOptionsNav">
+    <a href="/" class="ecomNav-logo"><img src="./images//logo/logo-1.png" style="width: 150px;" alt="" ></a>
+    <nav class="ecomNav-navbar">
+        <a href="/">HOME</a>  
+        <a href="./newarrival.html">NEW ARRIVAL</a>  
+        <a href="./explore.html">EXPLORE</a>  
+        <a href="./whatsnew.html">WHAT'S NEW?</a>  
+    </nav>
 
-            <!--====== Nav 1 ======-->
-            <nav class="primary-nav primary-nav-wrapper--border">
-                <div class="container">
+    <div class="ecomNav-icons">
+        <div class="fas fa-bars" id="ecomNav-menu-btn"></div>
+        <div class="fas fa-shopping-cart" id="ecomNav-cart-btn"></div>
+        <div class="fas fa-user" id="ecomNav-login-btn"></div>
+    <a href="./dashboard.html">    <div class="fas fa-tachometer-alt" id="ecomNav-cart-btn"></div></a>
 
-                    <!--====== Primary Nav ======-->
-                    <div class="primary-nav">
+    </div>
 
-                        <!--====== Main Logo ======-->
-
-                        <a class="main-logo" href="index.html">
-
-                            <img src="./images/logo/logo-1.png" alt="LOGO HERE"></a>
-                        <!--====== End - Main Logo ======-->
-
-<div class="searchAndMore">
-                        <!--====== Search Form ======-->
-                        <form class="main-form">
-
-                            <label for="main-search"></label>
-
-                            <input class="input-text input-text--border-radius input-text--style-1" type="text" id="main-search" placeholder="Search">
-
-                            <button class="btn btn--icon fas fa-search main-search-button" type="submit"></button></form>
-                        <!--====== End - Search Form ======-->
-                        <!--====== Dropdown Main plugin ======-->
-                        <div class="menu-init" id="navigation">
-
-                            <button class="btn btn--icon toggle-button toggle-button--secondary fas fa-cogs" type="button"></button>
-
-                            <!--====== Menu ======-->
-                            <div class="ah-lg-mode">
-
-                                <span class="ah-close">Close
-                                    <i class="ri-collapse-diagonal-2-line"></i>
-                                </span>
-
-                                <!--====== List ======-->
-                                <ul class="ah-list ah-list--design1 ah-list--link-color-secondary">
-                                    <li class="has-dropdown" data-tooltip="tooltip" data-placement="left" title="Account">
-
-                                        <a ><i class="far fa-user-circle"></i></a>
-
-                                        <!--====== Dropdown ======-->
-
-                                        <span class="js-menu-toggle"></span>
-                                        <ul style="width:120px">
-                                            <li>
-
-                                                <a href="signup.html"><i class="fas fa-user-plus u-s-m-r-6"></i>
-
-                                                    <span>Signup</span></a></li>
-                                            <li>
-
-                                                <a href="signin.html"><i class="fas fa-lock u-s-m-r-6"></i>
-
-                                                    <span>Signin</span></a></li>
-                                            <li>
-
-                                                <a href="signup.html"><i class="fas fa-lock-open u-s-m-r-6"></i>
-
-                                                    <span>Signout</span></a></li>
-                                        </ul>
-                                        <!--====== End - Dropdown ======-->
-                                    </li>
-                                    <li class="has-dropdown" data-tooltip="tooltip" data-placement="left" title="Dashboard">
-
-                                       <a href="./dashboard.html"><i class="fas fa-user-cog"></i></a>
-
-                                    </li>
-                                    <li data-tooltip="tooltip" data-placement="left" title="Feature your product">
-
-                                        <a href="tel:+0900901904"><i class="fas fa-phone-volume"></i></a></li>
-                                </ul>
-                                <!--====== End - List ======-->
-                            </div>
-                            <!--====== End - Menu ======-->
-                        </div>
-                        <!--====== End - Dropdown Main plugin ======-->
-                        </div>
-                    </div>
-                    <!--====== End - Primary Nav ======-->
+    <div class="ecomNav-shopping-cart">
+        <div class="ecomNav-box">
+            <i class="fas fa-trash"></i>
+            <img src="photos/cart-img-1.png" alt="">
+            <div class="ecomNav-content">
+ <div class="cartImgHeading">
+     <img src="./images/brand/b1.png" class="cartImg" alt="">
+                     <h3>watermelon</h3>
+ </div>
+ <div class="cartItemDets">
+                <span class="ecomNav-price">$4.99/-</span>
+                <span class="ecomNav-quantity">qty : 1</span>
                 </div>
-            </nav>
-            <!--====== End - Nav 1 ======-->
+            </div>
+        </div>
 
-
-            <!--====== Nav 2 ======-->
-            <nav class="secondary-nav-wrapper">
-                <div class="container">
-
-                    <!--====== Secondary Nav ======-->
-                    <div class="secondary-nav">
-
-
-                        <!--====== Dropdown Main plugin ======-->
-                        <div class="menu-init" id="navigation2">
-
-                            <button class="btn moreBtn btn--icon toggle-button toggle-button--secondary" type="button">
-                            MORE  <i class="ri-expand-diagonal-s-line"></i>
-                            </button>
-                    
-                            <!--====== Menu ======-->
-                            <div class="ah-lg-mode">
-
-                                <span class="ah-close">Close
-                                    <i class="ri-collapse-diagonal-2-line"></i>
-                                </span>
-
-                                <!--====== List ======-->
-                                <ul class="ah-list ah-list--design2 ah-list--link-color-secondary">
-                                    <li>
-
-                                        <a href="./newarrival.html">NEW ARRIVALS</a></li>
-                                    <li class="has-dropdown">
-
-                                        <a href="./explore.html">EXPLORE</i></a>
-                                    </li>
-                                    <li class="has-dropdown">
-
-                                        <!-- <a>BLOG<i class="fas fa-angle-down u-s-m-l-6"></i></a> -->
-
-                                    </li>
-                                    <li>
-                                        <a href="./bestSale.html">BEST SALE PRODUCT</a></li>
-                                    <li>
-                                        <a href="./whatsnew.html">WHAT'S NEW?</a></li>
-                                </ul>
-                                <!--====== End - List ======-->
-                            </div>
-                            <!--====== End - Menu ======-->
-                        </div>
-                        <!--====== End - Dropdown Main plugin ======-->
-
-
-
-                    </div>
-                    <!--====== End - Secondary Nav ======-->
+         <div class="ecomNav-box">
+            <i class="fas fa-trash"></i>
+            <img src="photos/cart-img-1.png" alt="">
+            <div class="ecomNav-content">
+ <div class="cartImgHeading">
+     <img src="./images/brand/b1.png" class="cartImg" alt="">
+                     <h3>watermelon</h3>
+                     
+ </div>
+ <div class="cartItemDets">
+                <span class="ecomNav-price">$4.99/-</span>
+                <span class="ecomNav-quantity">qty : 1</span>
                 </div>
-            </nav>
-            <!--====== End - Nav 2 ======-->
-        </header>
-        <!--====== End - Main Header ======-->
+            </div>
+        </div>
+        <div class="ecomNav-box">
+            <i class="fas fa-trash"></i>
+            <img src="photos/cart-img-1.png" alt="">
+            <div class="ecomNav-content">
+ <div class="cartImgHeading">
+     <img src="./images/brand/b1.png" class="cartImg" alt="">
+                     <h3>watermelon</h3>
+ </div>
+ <div class="cartItemDets">
+                <span class="ecomNav-price">$4.99/-</span>
+                <span class="ecomNav-quantity">qty : 1</span>
+                </div>
+            </div>
+        </div>
+        <div class="ecomNav-total">total : $19.69/-</div>
+        <a href="./checkout.html" class="ecomNav-btn">checkout</a>
+    </div>
 
+    <form action="" class="ecomNav-login-form">
+        <h3>Be Our Member</h3>
+      <a href="./signin.html" class="ecomNav-btn"> <button>Login</button></a> 
+      <a href="./signup.html" class="ecomNav-btn"> <button>I am New</button></a> 
+    </form>
+       </div>   
+  <div class="">
+<div class="input-group">
+<div class="input-group serchParent">
+  <input type="search" class="form-control searchBar rounded" placeholder="Feel Free to Search here..." aria-label="Search" aria-describedby="search-addon" />
+  <button type="button" class="btn btn-outline-primary serchbtn" data-mdb-ripple-init>search</button>
+</div>
+</div>
+  </div>
+
+</header>
+<!-- Header section end -->
 
         <!--====== App Content ======-->
         <div class="app-content">
@@ -424,15 +364,8 @@
 
 
     <!--====== Google Analytics: change UA-XXXXX-Y to be your site's ID ======-->
-    <script>
-        window.ga = function() {
-            ga.q.push(arguments)
-        };
-        ga.q = [];
-        ga.l = +new Date;
-        ga('create', 'UA-XXXXX-Y', 'auto');
-        ga('send', 'pageview')
-    </script>
+<script src="./js/navbar.js"></script>
+
     <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 
     <!--====== Vendor Js ======-->
@@ -444,21 +377,5 @@
     <!--====== App ======-->
     <script src="js/app.js"></script>
 
-    <!--====== Noscript ======-->
-    <noscript>
-        <div class="app-setting">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="app-setting__wrap">
-                            <h1 class="app-setting__h1">JavaScript is disabled in your browser.</h1>
-
-                            <span class="app-setting__text">Please enable JavaScript in your browser or upgrade to a JavaScript-capable browser.</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </noscript>
 </body>
 </html>
