--- a/public/client-side/css/app.css
+++ b/public/client-side/css/app.css
@@ -634,9 +634,10 @@ body {
   * Image Responsive utility classes
  */
 .u-img-fluid {
-  width: 100%;
-  max-width: 100%;
-  height: auto; }
+width: 80%;
+    max-width: 80%;
+    height: auto;
+    margin: 0 auto; }
 
 /*--------------------------------------------------------------
 5.0 Components
@@ -1708,7 +1709,7 @@ input::-ms-clear {
   z-index: 2;
   position: absolute;
   top: 0;
-  right: -50px;
+  right: 0;
   background-color: transparent;
   padding: 8px;
   font-size: 24px;
@@ -2099,15 +2100,13 @@ backdrop-filter: blur(29px);
   position: relative; }
 
 .newsletter__btn {
-  position: absolute;
-  padding: 14px;
-  right: 0;
-  font-weight: 600;
-  font-size: 12px;
-  top: 50%;
-  border: none;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%); }
+    position: absolute;
+    padding: 11px;
+    right: 0;
+    font-weight: 600;
+    font-size: 12px;
+    border: none;
+    bottom: 0; }
 
 .newsletter__text {
   margin-top: 10px;
@@ -2360,7 +2359,8 @@ backdrop-filter: blur(29px);
   text-align: center; }
 
 .section__content {
-  position: relative; }
+  position: relative;
+}
 
 .section__heading {
   font-weight: 600;
@@ -3277,10 +3277,8 @@ backdrop-filter: blur(29px);
 14.0 Signin Signup Lost Password-Page
 --------------------------------------------------------------*/
 .l-f-o {
-  border: 1px solid #eee; 
-    border-radius: 50px;
-    background: #e0e0e0;
-    box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
+    border: 1px solid #e4e4e4;
+
 }
   .l-f-o__pad-box {
     padding: 20px; }
@@ -4545,7 +4543,7 @@ backdrop-filter: blur(29px);
 .pd-detail__form {
   width: 100%; }
   .pd-detail__form .btn {
-    padding: 1rem 3rem;
+    padding: 4px 7px;
     border-radius: 0.375rem; }
 
 /**
@@ -4839,10 +4837,13 @@ backdrop-filter: blur(29px);
 
 @media (max-width: 575px) {
   .pd-detail-inline-2 {
-    display: block; }
+         display: flex;
+        justify-content: space-around;
+  }
     .pd-detail-inline-2 div {
-      display: block;
-      margin-right: 0; }
+        display: flex;
+        justify-content: space-around;
+     }
   .rev-f1__group {
     display: block; } }
 
@@ -6010,6 +6011,11 @@ color: #ff4500;
 }
 .u-s-m-b-15 input{
 border: 1px solid orangered ;
+}
+.signwithgoogleText{
+      text-align: center;
+    color: black;
+    font-size: 16px;
 }
 @media (max-width: 991px) {
 .pageUl{
