--- a/public/client-side/css/app.css
+++ b/public/client-side/css/app.css
@@ -997,9 +997,56 @@ input::-ms-clear {
 
 /* Product Component */
 .product-o {
-  padding: 20px;
-  background-color: #ffffff; }
+padding: 20px;
+    padding: 20px;
+    margin: 0 6px;
+    border-radius: 50px;
+    background: #e8e5e5;
+    box-shadow: 3px 6px 4px #bbbbbb, 0px 5px 7px #ffffff;
+}
+.product-o-link {
+    display: block;
+    text-decoration: none; /* Removes underline from the link */
+    color: inherit; /* Inherits text color from parent */
+}
+.Productoption{
+  height: 21px;
+    bottom: 0;
+    display: flex;
+    justify-content: space-between;
+}
+.Productoption{
+cursor: pointer;
+font-size: 12px;
+    height: fit-content;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    padding: 8px 0;
+}
+.productName{
+  text-align: center;
+  display: block;
+  font-size: 15px;
+  color: black;
+}
+.product-o-link .product-o {
+    /* Ensures the product block is styled as intended */
+    display: block; /* Makes sure the product block is a block-level element */
+}
+.quickvewandAddtocart{
+      display: flex;
+    justify-content: space-around;
+    gap: 8px;
+}
 
+.addtoCartBtnHompepage{
+background-color: orangered;
+color: white !important;
+}
+.quickViewBtnHompepage{
+  background-color: #2abbe8;
+}
 .product-o--hover-off {
   box-shadow: 0 0 21px 0 rgba(0, 0, 0, 0.1); }
 
@@ -1025,7 +1072,9 @@ input::-ms-clear {
           transform: translateY(0); }
 
 .product-o__wrap {
-  position: relative; }
+  position: relative;
+z-index: 0;
+}
   .product-o__wrap:before {
     content: "";
     background: rgba(0, 0, 0, 0.6);
@@ -4469,7 +4518,22 @@ backdrop-filter: blur(29px);
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
   -ms-flex-align: center;
-      align-items: center; }
+      align-items: center; 
+      justify-content: space-around;    
+    }
+    .addToCartandBuyNow{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 11px;
+    }
+    .addToCartandBuyNow button{
+width: 100%;
+    }
+.addtocartBTN {
+  background-color: #2abbe8;
+  border: none;
+}
   .pd-detail-inline-2 div {
     margin-right: 14px; }
     .pd-detail-inline-2 div:last-child {
@@ -5433,6 +5497,12 @@ backdrop-filter: blur(29px);
   visibility: visible;
   opacity: 1; }
 
+  .ecomNav-logo img{
+        width: 140px;
+    background: #ffffff;
+    border-radius: 36px;
+    filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, 0.6));
+  }
 @media (max-width: 575px) {
   .is-list-active .product-m__thumb {
     margin-bottom: 30px;
@@ -6009,13 +6079,14 @@ box-shadow:  20px 20px 60px #bebebe,
 .fa, .fab, .fal, .far, .fas {
 color: #ff4500;
 }
-.u-s-m-b-15 input{
-border: 1px solid orangered ;
-}
+
 .signwithgoogleText{
       text-align: center;
     color: black;
     font-size: 16px;
+}
+.quickvewandAddtocart button i{
+color:whitesmoke !important;
 }
 @media (max-width: 991px) {
 .pageUl{
