--- a/public/client-side/css/utility.css
+++ b/public/client-side/css/utility.css
@@ -2950,9 +2950,6 @@
   padding-left: 3.75rem;
   padding-right: 3.75rem; }
 
-.u-s-p-y-60 {
-  padding-bottom: 3.75rem; }
-
 .u-s-p-xy-60 {
   padding: 3.75rem; }
 
@@ -4390,8 +4387,8 @@
   padding-right: 5.625rem; }
 
 .u-s-p-y-90 {
-  padding-top: 5.625rem;
-  padding-bottom: 5.625rem; }
+  padding-bottom: 5.625rem;
+ }
 
 .u-s-p-xy-90 {
   padding: 5.625rem; }
