--- a/public/client-side/css/navbar.css
+++ b/public/client-side/css/navbar.css
@@ -272,7 +272,7 @@ a button{
 .upperOptionsNav{
         width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 
 }
