--- a/public/client-side/css/navbar.css
+++ b/public/client-side/css/navbar.css
@@ -218,8 +218,9 @@ box-shadow: 0px 0px 6px 0px;
     cursor: pointer;
     background: none;
     width: 50%;
-    margin: 0 auto;
     color: orangered;
+        margin: 8px auto 8px auto;
+
 }
 .ecomNav-btn:hover {
     background: var(--orange);
