--- a/public/client-side/css/app.css
+++ b/public/client-side/css/app.css
@@ -5140,7 +5140,6 @@ width: 100%;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
   padding: 4px 0 0 30px;
   border-radius: 0.625rem;
-    margin-bottom: 22px;
 }
 
 .shop-p__meta-text-1 {
@@ -5459,31 +5458,22 @@ width: 100%;
     text-decoration: underline; }
 
 .shop-a__wrap {
-  position: fixed;
+
   top: 0;
-  width: 350px;
+  width: 250px;
   min-height: 100vh;
   bottom: 0;
   z-index: 9999;
   right: 0;
-  transition: all 400ms ease-out;
-  -webkit-transform: translate(200px, 0);
-          transform: translate(200px, 0);
   box-shadow: 0 0 7px 2px rgba(0, 0, 0, 0.09);
-  background-color: #ffffff;
-  visibility: hidden;
-  opacity: 0; }
+}
 
 .shop-a__inner {
   overflow: auto;
   height: 100%;
   padding: 1.25rem 1.125rem; }
 
-.shop-a.is-open .shop-a__wrap {
-  -webkit-transform: translate(0, 0);
-          transform: translate(0, 0);
-  visibility: visible;
-  opacity: 1; }
+
 
   .ecomNav-logo img{
         width: 140px;
@@ -6008,13 +5998,6 @@ max-height: 400px;
 }
 .dashboardRecentOrder{
 background: #efefef;
-    box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px 
-}
-.orderMng{
-  border-radius: 50px;
-background: #e0e0e0;
-box-shadow:  20px 20px 60px #bebebe,
-             -20px -20px 60px #ffffff;
 }
 .headingDashboardoredr{
   padding: 0 !important;
@@ -6078,6 +6061,29 @@ color: #ff4500;
 color:whitesmoke !important;
 }
 
+.productParent{
+     display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 100%;
+
+    grid-gap: 21px;
+}
+.singleProduct{
+  width: 80% !important;
+      margin: 0 37px;
+}
+.ssllll{
+  height: 100vh;
+}
+.productParentParent{
+  display: grid;
+  grid-template-columns: 0fr 4fr;
+}
+.gridParent{
+      display: grid;
+    grid-template-columns: 1fr 5fr;
+
+}
 @media (max-width: 991px) {
 .pageUl{
  flex-direction: column;
