--- a/public/client-side/css/app.css
+++ b/public/client-side/css/app.css
@@ -3027,32 +3027,9 @@ backdrop-filter: blur(29px);
   font-weight: 600;
   font-size: 13px; }
 
-@media (max-width: 991px) {
-  .w-r__wrap-2 {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-direction: column;
-        flex-direction: column;
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
-    -ms-flex-align: end;
-        align-items: flex-end; } }
-
-@media (max-width: 767px) {
-  .table-p td {
-    min-width: 200px; }
-  .w-r__container {
-    -ms-flex-direction: column;
-        flex-direction: column; }
-  .w-r__wrap-1 {
-    -ms-flex-direction: column;
-        flex-direction: column; }
-  .w-r__info {
-    text-align: center;
-    margin: 15px 0 15px; }
-  .w-r__wrap-2 {
-    -ms-flex-align: center;
-        align-items: center; } }
+.fltrBtn{
+  display: none;
+} 
 
 /*--------------------------------------------------------------
 12.0 Empty-404-Pages
@@ -4910,7 +4887,7 @@ width: 100%;
 .shop-w__h {
   font-size: 14px;
   padding: 14px 18px;
-  border-bottom: 1px solid #efefef;
+  border-bottom: 1px solid #FF5722;
   color: #333333;
   font-weight: 700;
   line-height: 20px; }
@@ -5018,7 +4995,8 @@ width: 100%;
 
 .mainCategory {
     position: relative;
-    border: 1px solid orangered;
+    background: #e9e9e9;
+    box-shadow: 3px 6px 4px #bbbbbb, 0px 5px 7px #ffffff;
     margin: 0 auto;
     text-align: center;
     border-radius: 14px;
@@ -5548,9 +5526,7 @@ width: 100%;
   background-color: #f5f5f5;
   border-radius: 2px; }
 
-@media (max-width: 991px) {
-  .tooltip.show {
-    opacity: 0; } }
+
 
 /*--------------------------------------------------------------
 20.2 jquery.shopnav
@@ -6071,6 +6047,8 @@ color:whitesmoke !important;
 .singleProduct{
   width: 80% !important;
       margin: 0 37px;
+      background: #e8e5e5;
+    box-shadow: 3px 6px 4px #bbbbbb, 0px 5px 7px #ffffff;
 }
 .ssllll{
   height: 100vh;
@@ -6084,6 +6062,21 @@ color:whitesmoke !important;
     grid-template-columns: 1fr 5fr;
 
 }
+@media (max-width: 767px) {
+  .table-p td {
+    min-width: 200px; }
+  .w-r__container {
+    -ms-flex-direction: column;
+        flex-direction: column; }
+  .w-r__wrap-1 {
+    -ms-flex-direction: column;
+        flex-direction: column; }
+  .w-r__info {
+    text-align: center;
+    margin: 15px 0 15px; }
+  .w-r__wrap-2 {
+    -ms-flex-align: center;
+        align-items: center; } }
 @media (max-width: 991px) {
 .pageUl{
  flex-direction: column;
@@ -6117,5 +6110,35 @@ padding: 0;
     padding: 12px 1rem;
 }
 
+  .tooltip.show {
+    opacity: 0; } 
+  .productParentParent {
+    grid-template-columns: 1fr !important;
 }
+.ssllll {
+  display: none ;
+}
+  .productParent {
+    grid-template-columns: 1fr 1fr !important;
+    margin: 0 !important;
+}
+.singleProduct{
+      width: 99% !important;
+    margin: 0 auto !important;
+}
+.fltrBtn{
+  display: block;
+} 
+  .w-r__wrap-2 {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+        flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -ms-flex-align: end;
+        align-items: flex-end; }
+}
+
+
 
