--- a/public/client-side/css/app.css
+++ b/public/client-side/css/app.css
@@ -4995,15 +4995,13 @@ width: 100%;
 
 .mainCategory {
     position: relative;
-    background: #e9e9e9;
-    box-shadow: 3px 6px 4px #bbbbbb, 0px 5px 7px #ffffff;
     margin: 0 auto;
     text-align: center;
     border-radius: 14px;
     margin: 6px 0;
 }
 .hedingCategory{
-      background: #e8e8e8;
+      background: #cecece82;
     padding: 2px 37px;
     border-radius: 12px 0;
 }
@@ -6148,9 +6146,10 @@ padding: 0;
 .leftSideBar{
     position: fixed;
     z-index: 9999;
-    background: red;
+background: #ffffff;
     height: 100vh;
     top: 16%;
+    display: none;
 }
 
 .midetailsOfUser{
