--- a/public/client-side/css/navbar.css
+++ b/public/client-side/css/navbar.css
@@ -19,7 +19,7 @@
     border: none;
     text-decoration: none;
     text-transform: capitalize;
-    transition: all .2s linear;
+    transition: all .1s linear;
 }
 html {
     font-size: 62.5%;
@@ -71,7 +71,7 @@ body {
   padding: 1em;
   background-color: #ccc;
   box-shadow: inset 2px 5px 10px rgba(0,0,0,0.3);
-  transition: 300ms ease-in-out;
+  transition: .1s ease-in-out;
   border: none !important;
 }
 
@@ -130,7 +130,7 @@ body {
 }
 .ecomNav-header .ecomNav-search-form.active {
     right: 2rem;
-    transition: .4s linear;
+    transition: .1s linear;
 }
 .ecomNav-header .ecomNav-search-form input {
     height: 100%;
@@ -162,7 +162,7 @@ body {
 }
 .ecomNav-header .ecomNav-shopping-cart.active {
     right: 2rem;
-    transition: .4s linear;
+    transition: .1s linear;
 }
 .ecomNav-content{
     line-height: 0 !important;
@@ -316,18 +316,19 @@ gap: 11px;
     color: orangered !important;
 }
 .cartNum{
-    position: absolute;
-    top: -3px;
+position: absolute;
+    top: -1px;
     right: 21px;
     color: #ffffff;
-    font-size: 23px;
+    font-size: 15px;
     opacity: 80%;
-    background:#001d33;
+    background: #ff0000;
     display: inline-block;
     border-radius: 31px;
-    width: 26px;
-    height: 26px;
+    width: 16px;
+    height: 16px;
     line-height: 1;
+    font-weight: 100 !important;
 }
 .ecomNav-profile-options{
       display: flex !important;
@@ -347,7 +348,7 @@ gap: 11px;
 .ecomNav-profile-options button:hover{
 scale: 1.1;
 background-color: rgb(255, 206, 206);
-transition: .2sec ease-in-out;
+transition: .1sec ease-in-out;
 }
 .ecomNav-profile-options a{
     font-size: 1.3rem;
@@ -358,6 +359,9 @@ transition: .2sec ease-in-out;
 .ecomNav-profile-options a:hover{
 scale: 1.1;
 background-color: rgb(241, 238, 238);
+}
+.sidebar .links li a:hover{
+scale: 1.1;
 }
 .ecomNav-profile-options i{
     font-size: 1.4rem;
@@ -382,7 +386,7 @@ background-color: rgb(241, 238, 238);
         display: block !important;
     }
     .loggedInUserIcon{
-            height: 35px;
+            height: 27px;
     display: flex;
     align-items: center;
     }
@@ -394,7 +398,7 @@ background-color: rgb(241, 238, 238);
     font-size: 18px !important;
 }
 .ecomNav-header {
-        padding: .7rem 0 0 0;
+              padding: 0.7rem 0 8px 0;
     }
     .upperOptionsNav{
         margin-bottom: 12px;
@@ -419,7 +423,7 @@ background-color: rgb(241, 238, 238);
     }
     .ecomNav-header .ecomNav-navbar.active {
         right: 2rem;
-        transition: .4s linear;
+        transition: .1s linear;
     }
     .ecomNav-header .ecomNav-navbar a {
         font-size: 2rem;
