added category menu i nsho-page

--- a/public/client-side/css/app.css
+++ b/public/client-side/css/app.css
@@ -4390,6 +4390,13 @@ backdrop-filter: blur(29px);
     .respond__group div:last-child {
       margin-right: 0; }
 
+      .js-shop-category-span{
+        position: absolute;
+    width: 100%;
+    top: 5px;
+text-align: right;
+    padding: 6px 11px 0px 0;
+      }
 @media (max-width: 991px) {
   .blog-m__element {
     width: 50%; }
